# EdgeLang

./: .gitignore  CMakeLists.txt  Makefile  README.md  edge_grammar.txt  test_file.edge
include/: Common.h  EdgeDialect.td  Frontend.h  Middleend.h  TokenDef.h  Toolchain.h
include/Edge/: Common.h  Frontend.h  Middleend.h  SelectionDAG.h  Toolchain.h  X86.h
include/Edge/Conversion/Edge/: CMakeLists.txt  Passes.h  Passes.td
include/Edge/Dialect/: CMakeLists.txt
include/Edge/Dialect/Edge/: CMakeLists.txt  Dialect.h  EdgeDialect.h  EdgeDialect.td  EdgeOps.h
lib/: Frontend.cpp  Middleend.cpp  SelectionDAG.cpp  Toolchain.cpp  main.cpp
lib/Conversion/Edge/: CMakeLists.txt  IntermediateEdgeLoweringPass.cpp  LLVMIntermediateLoweringPass.cpp  Passes.cpp
lib/Dialect/Edge/: CMakeLists.txt  EdgeDialect.cpp  EdgeOps.cpp
src/: Frontend.cpp  Toolchain.cpp  main.cpp
